test/files/neg/t10296-both.check
Unused_2.scala:8: warning: private method k in object Unused is never used
  private def k(): Int = 17
              ^
Unused_2.scala:7: warning: private method g in object Unused is never used
  private def g(): Int = 17
              ^
error: No warnings can be incurred under -Xfatal-warnings.
two warnings found
one error found
